--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         </div>
         <div class="card-body">
             <u>Deine Punktzahl: <span id="score"></span></u>
+            <p>Quelle: Chat GPT</p>
         </div>
     </div>
 
