--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         }
 
         function draw() {
-            ctx.clearRect(0, 0, canvasWidth, canvasHeight); // Clear the canvas
+            ctx.clearRect(0, 0, canvasWidth, canvasHeight);
             ctx.drawImage(backgroundImage, 0, 0, canvasWidth, canvasHeight);
         }
 
