--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div class="card-body">
             <u>Deine Punktzahl: <span id="score"></span></u>
-            <p>Quelle: Chat GPT</p>
+            <p>Quelle: https://www.css.ch/de/privatkunden.html</p>
         </div>
     </div>
 
@@ -77,3 +77,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
+
